--- a/success.html
+++ b/success.html
@@ -39,8 +39,8 @@
     <h1 class="display-4">Thank you for Subscribing</h1>
     <p class="lead">We will email you often</p>
     <hr class="my-4">
-    <form action="/" method="post">
-    <a class="btn btn-primary btn-lg" href="#" role="button" onclick="history.back()">Go Back to Home</a>
+    <form action="/failure" method="post">
+    <button class="btn btn-primary btn-lg" href="#" role="button">Go Back to Home</button>
     </form>
   </div>
 </body>
